Fixed z-index of .time class from -1 to 0 so title tooltip would work

--- a/ui/round/css/_clock.scss
+++ b/ui/round/css/_clock.scss
@@ -87,7 +87,7 @@
 
     /* ensure updates don't redraw other parts of the document */
     will-change: transform;
-    z-index: -1;
+    z-index: 0;
     display: flex;
 
     &.hour {
